<resources>
    <string name="app_name">taskmasteragain</string>
    <string name="my_task">My Task</string>
    <string name="task_description">Task Description</string>
    <string name="do_something">do something</string>
    <string name="total_tasks_0">Total Tasks : 0</string>
    <string name="add_task">Add Task</string>
    <string name="task_title">Task Title</string>
    <string name="all_task">All  Task</string>
    <string name="my_tasks">My Task</string>
    <string name="all_tasks">All Tasks</string>
    <string name="enter_name">Enter Name</string>
    <string name="save">Save</string>
    <string name="setting">Setting</string>
    <string name="java">Java</string>
    <string name="c">C++</string>
    <string name="javascript">Javascript</string>
    <string name="title">Title</string>
    <string name="lorem">lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_quisque_nisl_eros_pulvinar_facilisis_justo_mollis_auctor_consequat_urna_morbi_a_bibendum_metus_donec_scelerisque_sollicitudin_enim_eu_venenatis</string>
    <string name="Title">Title</string>
    <string name="Body">Body</string>
    <string name="State">State</string>
    <string name="task_detail">Task Detail</string>
    <string name="name">Name</string>
    <string name="image">Image</string>
    <string name="team">Team</string>
    <string name="list_task">list task</string>
    <string name="teamname">TeamName</string>
    <string name="team_name">team Name</string>
    <string name="upload_file">Upload File</string>
    <!--    <item name="delete_list" type="id">delete</item>-->
    <string-array name="tasks">
        <item>Task1</item>
        <item>Task2</item>
        <item>Task3</item>
    </string-array>

    <string-array name="teamNames">
        <item>TeamA</item>
        <item>TeamB</item>
        <item>TeamC</item>
    </string-array>
</resources>